2004-11-12 Seiichi SATO <ssato@sh.rim.or.jp>

	* xwindow/x_im.c, xwindow/x_im_candidate_screen.c,
	  xwindow/x_im_candidate_screen.h, inputmethod/iiimf/im_iiimf.c,
	  inputmethod/m17nlib/im_m17nlib.c, inputmethod/uim/im_uim.c:
	  allowed to list candidates horizontally.

	* xwindow/x_im.h: increased IM_API_VERSION.

2004-11-07 Seiichi SATO <ssato@sh.rim.or.jp>

	* tool/mlconfig/mc_im.c: "None" -> _("None")

2004-11-04 Seiichi SATO <ssato@sh.rim.or.jp>

	* xwindow/x_im.c: don't increase ref_count_uim and ref_count_m17nlib if
	  x_im_new() failed.
	
	* tool/mlconfig/mc_sb_view.c (has_rc_file): I forgot closing dir, fixed.

2004-11-04 Seiichi SATO <ssato@sh.rim.or.jp>

	* inputmethod/m17nlib/im_m17nlib.c:
	- - fixed a bug that the last preedit text was not cleared when
	    deactivating the input method. (Thanks to Ken'ichi HANDA)
	    <http://sourceforge.net/mailarchive/message.php?msg_id=9913473>
	  - changed the format in the status window.
	  - minor cleanups.

	* man/mlterm.1: added explanation for keyboard input method to
	  'GUI CONFIGURATOR'.

2004-10-29 Seiichi SATO <ssato@sh.rim.or.jp>

	* tool/mlconfig/Makefile.in: -lmkf (required from libim-iiimf.so)

2004-10-29 Seiichi SATO <ssato@sh.rim.or.jp>

	Removed -lkik and -lmkf from linker flag of modules.
	Note: Both libraries are linked if the platform does not support
	undefined symblos such as Cygwin and AIX.

	* configure.in: added MKF_LIBS_FOR_MODULE and KIK_LIBS_FOR_MODULE.

	* inputmethod/kbd/Makefile.in, inputmethod/iiimf/Makefile.in,
	  inputmethod/uim/Makefile.in, inputmethod/m17nlib/Makefile.in:
	  KIK_LIBS -> KIK_LIBS_FOR_MODULE, MKF_LIBS -> MKF_LIBS_FOR_MODULE

	* mkf/configure.in, mkf/lib/Makefile.in: KIK_LDFLAGS -> KIK_LIBS

2004-10-29 Seiichi SATO <ssato@sh.rim.or.jp>

	* doc/ja/README.ja: added description about kbd and m17nlib.

	* configure.in: discontinue if imlib-config is not available.

2004-10-28 Seiichi SATO <ssato@sh.rim.or.jp>

	* inputmethod/uim/im_uim.c: